Time size reduced; Overlap error fixed

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
 }
 
 .currentTime{
-  font-size: 180px;
+  font-size: 170px;
   padding: 5px;
   /* font-style: italic; */
   font-weight: 700;
